syntax = "proto3";

package auth;

option go_package = "github.com/smilemakc/auth-gateway/proto";

// AuthService provides authentication and authorization operations for microservices
service AuthService {
  // ValidateToken validates a JWT access token and returns user information
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // GetUser retrieves user information by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // CheckPermission checks if a user has specific permission
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);

  // IntrospectToken provides detailed information about a token
  rpc IntrospectToken(IntrospectTokenRequest) returns (IntrospectTokenResponse);

  // CreateUser creates a new user account
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Login authenticates a user with email/phone and password
  rpc Login(LoginRequest) returns (LoginResponse);

  // InitPasswordlessRegistration initiates passwordless two-step registration
  rpc InitPasswordlessRegistration(InitPasswordlessRegistrationRequest) returns (InitPasswordlessRegistrationResponse);

  // CompletePasswordlessRegistration completes registration after OTP verification
  rpc CompletePasswordlessRegistration(CompletePasswordlessRegistrationRequest) returns (CompletePasswordlessRegistrationResponse);

  // ========== OAuth Provider Methods ==========

  // IntrospectOAuthToken validates OAuth access token (RFC 7662)
  rpc IntrospectOAuthToken(IntrospectOAuthTokenRequest) returns (IntrospectOAuthTokenResponse);

  // ValidateOAuthClient validates OAuth client credentials
  rpc ValidateOAuthClient(ValidateOAuthClientRequest) returns (ValidateOAuthClientResponse);

  // GetOAuthClient retrieves OAuth client information by client_id
  rpc GetOAuthClient(GetOAuthClientRequest) returns (GetOAuthClientResponse);
}

// ValidateTokenRequest contains the token to validate
message ValidateTokenRequest {
  string access_token = 1;
}

// ValidateTokenResponse contains validation result and user info
message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string username = 4;
  repeated string roles = 5;
  string error_message = 6;
  int64 expires_at = 7; // Unix timestamp
  bool is_active = 8;
}

// GetUserRequest contains the user ID to retrieve
message GetUserRequest {
  string user_id = 1;
}

// User represents user information
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  string profile_picture_url = 5;
  repeated string roles = 6;
  bool email_verified = 7;
  bool is_active = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
}

// GetUserResponse contains user information
message GetUserResponse {
  User user = 1;
  string error_message = 2;
}

// CheckPermissionRequest contains permission check data
message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2; // e.g., "users", "products", "orders"
  string action = 3;   // e.g., "read", "write", "delete"
}

// CheckPermissionResponse contains permission check result
message CheckPermissionResponse {
  bool allowed = 1;
  string role = 2;
  string error_message = 3;
}

// IntrospectTokenRequest contains the token to introspect
message IntrospectTokenRequest {
  string access_token = 1;
}

// IntrospectTokenResponse contains detailed token information
message IntrospectTokenResponse {
  bool active = 1;
  string user_id = 2;
  string email = 3;
  string username = 4;
  string role = 5;
  int64 issued_at = 6;
  int64 expires_at = 7;
  int64 not_before = 8;
  string subject = 9;
  bool blacklisted = 10;
  string error_message = 11;
}

// CreateUserRequest contains data for creating a new user
message CreateUserRequest {
  string email = 1;
  string phone = 2;
  string username = 3;
  string password = 4;
  string full_name = 5;
  string account_type = 6; // "human" or "service"
}

// CreateUserResponse contains the result of user creation
message CreateUserResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
  string error_message = 5;
}

// LoginRequest contains credentials for authentication
message LoginRequest {
  string email = 1;    // Email for login (optional if phone provided)
  string phone = 2;    // Phone for login (optional if email provided)
  string password = 3; // User password
}

// LoginResponse contains the result of login
message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
  string error_message = 5;
}

// InitPasswordlessRegistrationRequest contains data to initiate passwordless registration
message InitPasswordlessRegistrationRequest {
  string email = 1;    // Optional if phone is provided
  string phone = 2;    // Optional if email is provided
  string username = 3; // Optional, will be auto-generated if not provided
  string full_name = 4;
}

// InitPasswordlessRegistrationResponse contains the result of registration initiation
message InitPasswordlessRegistrationResponse {
  bool success = 1;
  string message = 2;
  string error_message = 3;
}

// CompletePasswordlessRegistrationRequest contains data to complete registration
message CompletePasswordlessRegistrationRequest {
  string email = 1; // Must match init request
  string phone = 2; // Must match init request
  string code = 3;  // 6-digit OTP code
}

// CompletePasswordlessRegistrationResponse contains the result of completed registration
message CompletePasswordlessRegistrationResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
  string error_message = 5;
}

// ========== OAuth Provider Messages ==========

// IntrospectOAuthTokenRequest contains the OAuth token to introspect
message IntrospectOAuthTokenRequest {
  string token = 1;
  string token_type_hint = 2; // "access_token" or "refresh_token"
}

// IntrospectOAuthTokenResponse contains RFC 7662 introspection response
message IntrospectOAuthTokenResponse {
  bool active = 1;
  string scope = 2;
  string client_id = 3;
  string username = 4;
  string token_type = 5;
  int64 exp = 6;    // Expiration time (Unix timestamp)
  int64 iat = 7;    // Issued at (Unix timestamp)
  int64 nbf = 8;    // Not before (Unix timestamp)
  string sub = 9;   // Subject (user ID)
  string aud = 10;  // Audience
  string iss = 11;  // Issuer
  string jti = 12;  // JWT ID
  string error_message = 13;
}

// ValidateOAuthClientRequest contains client credentials to validate
message ValidateOAuthClientRequest {
  string client_id = 1;
  string client_secret = 2;
}

// ValidateOAuthClientResponse contains client validation result
message ValidateOAuthClientResponse {
  bool valid = 1;
  string client_id = 2;
  string client_name = 3;
  string client_type = 4;   // "confidential" or "public"
  repeated string scopes = 5;
  repeated string redirect_uris = 6;
  string error_message = 7;
}

// GetOAuthClientRequest contains the client_id to retrieve
message GetOAuthClientRequest {
  string client_id = 1;
}

// OAuthClient represents OAuth client information
message OAuthClient {
  string id = 1;
  string client_id = 2;
  string client_name = 3;
  string client_type = 4;
  repeated string redirect_uris = 5;
  repeated string scopes = 6;
  repeated string grant_types = 7;
  string token_endpoint_auth_method = 8;
  bool is_active = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}

// GetOAuthClientResponse contains OAuth client information
message GetOAuthClientResponse {
  OAuthClient client = 1;
  string error_message = 2;
}
